[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/DoorSpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Door.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 112.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="Door" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="DoorSpriteSheet" type="Sprite" parent="."]
position = Vector2( 16, 16 )
texture = ExtResource( 1 )
vframes = 2
hframes = 2
frame = 1

[node name="OpenAnimation" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpenAnimation"]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="LevelChange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelChange"]
position = Vector2( 16, 16 )
shape = SubResource( 2 )
[connection signal="body_entered" from="OpenAnimation" to="." method="_on_OpenAnimation_body_entered"]
[connection signal="body_exited" from="OpenAnimation" to="." method="_on_OpenAnimation_body_exited"]
[connection signal="body_entered" from="LevelChange" to="." method="_on_LevelChange_body_entered"]
